Auxiliary data analysis functions.
- Contour overlay.
- Diagnosis of failure modes like in SDS paper.

--- a/scripts/explore.ipynb
+++ b/scripts/explore.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "aef7cf21-01f2-4807-80bd-4aea5554e112",
     "_uuid": "86fa6307b84ecacda64d84ec2aba8a4d657fb82f",
@@ -69,23 +69,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "_cell_guid": "fc91d64f-2791-4991-aee4-98a9882eaee6",
-    "_uuid": "afc5ecb58aaa93f3c519eaff6a24e2fa7f38fb20"
+    "_uuid": "afc5ecb58aaa93f3c519eaff6a24e2fa7f38fb20",
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 1/670 [00:00<01:29,  7.46it/s]"
+      "  0%|          | 3/670 [00:00<00:32, 20.45it/s]"
      ]
     },
     {
@@ -99,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 670/670 [03:13<00:00,  3.47it/s]\n"
+      "100%|██████████| 670/670 [01:11<00:00,  9.42it/s]\n"
      ]
     }
    ],
@@ -1536,8 +1539,7 @@
    "execution_count": 25,
    "metadata": {
     "_cell_guid": "3778a7a7-6f90-4bec-8a2f-4a2d3bbd6eca",
-    "_uuid": "60f16cff770f71d209c02bd617b342c01cc7133b",
-    "collapsed": true
+    "_uuid": "60f16cff770f71d209c02bd617b342c01cc7133b"
    },
    "outputs": [
     {
@@ -1661,7 +1663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
