More diagnostic and plotting.

--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from os.path import join\n",
@@ -23,13 +25,9 @@
     "import utils\n",
     "from utils import read_img_join_masks, add_contour, show_with_contour, iou_metric, show_img, diagnose_errors\n",
     "\n",
-    "img_id = 'ed5be4b63e9506ad64660dd92a098ffcc0325195298c13c815a73773f1efc279'\n",
+    "img_id = '091944f1d2611c916b98c020bd066667e33f4639159b2a92407fe5a40788856d'\n",
     "img, mask = read_img_join_masks(img_id)\n",
-    "#mask2 = plt.contour(mask.astype(float), alpha=0.5)\n",
-    "#print mask2S\n",
-    "#print np.amax(mask)\n",
-    "#show_with_contour(img,mask)\n",
-    "#\n"
+    "\n"
    ]
   },
   {
@@ -85,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#show_with_contour(mask2,mask)"
@@ -94,7 +94,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#a=np.array([[1,1,1,1],[1,1,1,0],[1,1,1,0],[1,1,1,0]])\n",
@@ -128,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
