Network with image type detector.

--- a/scripts/scratch.ipynb
+++ b/scripts/scratch.ipynb
@@ -106,6 +106,107 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAA5wAAAG4CAYAAAApEOjYAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEixJREFUeJzt3U+Ibgd5x/Hf0zuGmNiq0EU1CU0KYglCGwkStS2lsWBR\nmi66UNCFm2xqjdIiqfvSjRRdFCGkSqGii5iFiKiLSummwZtE0ORqCdHmjxFT2lpxo8Gnizu2Scyd\neee+58mZk/l8VnfenPfwcJh7n3znnJmp7g4AAAAs7ZfWHgAAAICXJsEJAADACMEJAADACMEJAADA\nCMEJAADACMEJAADACMEJAADACMEJAADACMEJAADAiIOJk1ZVT5wXgLOpu2vtGbbObgZgSbvuZnc4\nAQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAA\nGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGLFTcFbV26vq21X1SFXdOT0UAHA0\nuxmALajuPvqAqnNJ/i3JHyZ5IsnXkry7ux8+4j1HnxQATqC7a+0ZThO7GYC17bqbd7nD+aYkj3T3\no939kySfTXLbPsMBAHuxmwHYhF2C85okjz/r4ycOX3uOqrq9qs5X1fmlhgMAXpDdDMAmHCx1ou6+\nK8ldicd2AOA0sJsBWNsudzifTHLdsz6+9vA1AGAddjMAm7BLcH4tyeuq6oaquiLJu5J8fnYsAOAI\ndjMAm3DsI7Xd/UxVvT/Jl5OcS/LJ7n5ofDIA4AXZzQBsxbG/FuWyTur7RABYkF+Lsj+7GYAlLflr\nUQAAAODEBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcA\nAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAj\nBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcA\nAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAj\nBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcA\nAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAj\nBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcA\nAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjBCcAAAAjjg3Oqrquqr5aVQ9X1UNVdceLMRgA8MLs\nZgC2orr76AOqXpPkNd39QFX9cpL7k/xJdz98xHuOPikAnEB319oznCZ2MwBr23U3H3uHs7uf6u4H\nDv/8oyQXklyz33gAwOWymwHYioOTHFxV1ye5Kcl9L/Dfbk9y+yJTAQA7sZsBOM2OfaT2/w6sekWS\nf07y19197zHHemwHgMV4pPaF2c0ArGWxR2qTpKpeluRzST593EIDAObZzQBswS4/NKiS/EOS/+zu\nD+50Ul9FBWBB7nA+l90MwNp23c27BOfvJPmXJN9I8rPDlz/S3V884j2WGgCLEZzPZTcDsLbFgvNy\nWGoALElw7s9uBmBJi34PJwAAAJyU4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE\n4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQA\nAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE\n4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQA\nAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE\n4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQA\nAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE\n4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGCE4AQAAGDEzsFZVeeq6sGq\n+sLkQADAbuxmAE67k9zhvCPJhalBAIATs5sBONV2Cs6qujbJO5LcPTsOALALuxmALdj1DufHknw4\nyc8GZwEAdmc3A3DqHRucVfXOJD/o7vuPOe72qjpfVecXmw4A+AV2MwBbUd199AFVf5PkvUmeSXJl\nkl9Jcm93v+eI9xx9UgA4ge6utWc4TexmANa2624+Njifc3DV7yf5y+5+5zHHWWoALEZwXprdDMAa\ndt3Nfg8nAAAAI050h3Pnk/oqKgALcodzf3YzAEtyhxMAAIBVCU4AAABGCE4AAABGCE4AAABGCE4A\nAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABG\nCE4AAABGHKw9AJxl3b32CMeqqrVHAIAXjd0My3KHEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAA\ngBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGC\nEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAA\ngBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGC\nEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBGCEwAAgBEHaw8AZ1lVrT0CAPAsdjMs\nyx1OAAAARghOAAAARghOAAAARghOAAAARghOAAAARghOAAAARghOAAAARghOAAAARghOAAAARghO\nAAAARghOAAAARghOAAAARghOAAAARghOAAAARghOAAAARuwUnFX1qqq6p6q+VVUXqurN04MBAJdm\nNwOwBQc7HvfxJF/q7j+tqiuSXDU4EwBwPLsZgFOvuvvoA6pemeTrSX6jjzv4/9+z03EAsIvurrVn\nOE3sZgDWtutu3uWR2huSPJ3kU1X1YFXdXVVX7zUdALAPuxmATdglOA+SvDHJJ7r7piQ/TnLn8w+q\nqtur6nxVnV94RgDguexmADZhl0dqfy3Jv3b39Ycf/26SO7v7HUe8x2M7ACzGI7XPZTcDsLbFHqnt\n7u8nebyqXn/40q1JHt5jNgBgD3YzAFtx7B3OJKmq305yd5Irkjya5H3d/V9HHO+rqAAsxh3OX2Q3\nA7CmXXfzTsF5UpYaAEsSnPuzmwFY0pI/pRYAAABOTHACAAAwQnACAAAwQnACAAAwQnACAAAwQnAC\nAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAw\nQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnAC\nAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAw\nQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnAC\nAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAw\nQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnAC\nAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAwQnACAAAw\nQnACAAAwYqfgrKoPVdVDVfXNqvpMVV05PRgAcGl2MwBbcGxwVtU1ST6Q5ObufkOSc0neNT0YAPDC\n7GYAtmLXR2oPkry8qg6SXJXke3MjAQA7sJsBOPWODc7ufjLJR5M8luSpJD/s7q88/7iqur2qzlfV\n+eXHBAB+zm4GYCt2eaT21UluS3JDktcmubqq3vP847r7ru6+ubtvXn5MAODn7GYAtmKXR2rfluQ7\n3f10d/80yb1J3jI7FgBwBLsZgE3YJTgfS3JLVV1VVZXk1iQXZscCAI5gNwOwCbt8D+d9Se5J8kCS\nbxy+567huQCAS7CbAdiK6u7lT1q1/EkBOLO6u9aeYevsZgCWtOtu3vXXogAAAMCJCE4AAABGCE4A\nAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABG\nCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4A\nAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABG\nCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4A\nAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABG\nCE4AAABGCE4AAABGCE4AAABGCE4AAABGCE4AAABGHAyd9z+S/PuC5/vVw3Ny+VzD/bmG+3MNl3HW\nruOvrz3AS4TdfPq4hvtzDffnGi7jrF3HnXdzdffkIIuoqvPdffPac2yZa7g/13B/ruEyXEdOA5+H\n+3MN9+ca7s81XIbreGkeqQUAAGCE4AQAAGDEVoLzrrUHeAlwDffnGu7PNVyG68hp4PNwf67h/lzD\n/bmGy3AdL2ET38MJAADA9mzlDicAAAAbIzgBAAAYcaqDs6reXlXfrqpHqurOtefZoqq6rqq+WlUP\nV9VDVXXH2jNtUVWdq6oHq+oLa8+yVVX1qqq6p6q+VVUXqurNa8+0NVX1ocO/x9+sqs9U1ZVrz8TZ\nYzfvz25eht28P7t5f3bz8U5tcFbVuSR/l+SPktyY5N1VdeO6U23SM0n+ortvTHJLkj9zHS/LHUku\nrD3Exn08yZe6+zeT/FZczxOpqmuSfCDJzd39hiTnkrxr3ak4a+zmxdjNy7Cb92c378Fu3s2pDc4k\nb0rySHc/2t0/SfLZJLetPNPmdPdT3f3A4Z9/lIv/kFyz7lTbUlXXJnlHkrvXnmWrquqVSX4vyd8n\nSXf/pLv/e92pNukgycur6iDJVUm+t/I8nD128wLs5v3ZzfuzmxdjNx/jNAfnNUkef9bHT8Q/xnup\nquuT3JTkvnUn2ZyPJflwkp+tPciG3ZDk6SSfOnz86e6qunrtobaku59M8tEkjyV5KskPu/sr607F\nGWQ3L8xuvmx28/7s5j3Zzbs5zcHJgqrqFUk+l+SD3f0/a8+zFVX1ziQ/6O77155l4w6SvDHJJ7r7\npiQ/TuJ7v06gql6di3eSbkjy2iRXV9V71p0K2IfdfHns5sXYzXuym3dzmoPzySTXPevjaw9f44Sq\n6mW5uNA+3d33rj3Pxrw1yR9X1Xdz8dGxP6iqf1x3pE16IskT3f3zr+Dfk4tLjt29Lcl3uvvp7v5p\nknuTvGXlmTh77OaF2M17sZuXYTfvz27ewWkOzq8leV1V3VBVV+TiN+B+fuWZNqeqKhefzb/Q3X+7\n9jxb091/1d3Xdvf1ufg5+E/d7StXJ9Td30/yeFW9/vClW5M8vOJIW/RYkluq6qrDv9e3xg934MVn\nNy/Abt6P3bwMu3kRdvMODtYe4FK6+5mqen+SL+fiT3z6ZHc/tPJYW/TWJO9N8o2q+vrhax/p7i+u\nOBNn058n+fTh/6Q+muR9K8+zKd19X1Xdk+SBXPwJlw8muWvdqThr7ObF2M2cFnbzHuzm3VR3rz0D\nAAAAL0Gn+ZFaAAAANkxwAgAAMEJwAgAAMEJwAgAAMEJwAgAAMEJwAgAAMEJwAgAAMOJ/Ad8zCLdQ\nTE7xAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1c19875a90>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Very strange, matplotlib seems to invert colors!!!\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import skimage\n",
+    "from skimage.color import rgb2gray\n",
+    "from skimage import data\n",
+    "import numpy as np\n",
+    "#img = data.astronaut()\n",
+    "#img_gray = rgb2gray(img)\n",
+    "#fig, ax = plt.subplots(1,2, figsize=(16, 16))\n",
+    "#ax[0].imshow(img,cmap='gray')\n",
+    "#ax[1].imshow(img_gray,cmap='gray')\n",
+    "#plt.show()\n",
+    "\n",
+    "\n",
+    "img= np.zeros((10,10,3))\n",
+    "img[5,5,0]=1\n",
+    "img[5,5,1]=1\n",
+    "img[5,5,2]=1\n",
+    "img_gray = rgb2gray(img)\n",
+    "fig, ax = plt.subplots(1,2, figsize=(16, 16))\n",
+    "ax[0].imshow(img)\n",
+    "ax[1].imshow(img_gray,cmap='gray')\n",
+    "plt.show()\n",
+    "#show_images(ii)\n",
+    "#iii=np.repeat(np.expand_dims(rgb2grey(ii).astype(np.uint8),2),3,2)\n",
+    "#show_images([ii,rgb2grey(ii),iii])\n",
+    "#print iii\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "(0 ,.,.) = \n",
+       "  1\n",
+       "\n",
+       "(1 ,.,.) = \n",
+       "  2\n",
+       "\n",
+       "(2 ,.,.) = \n",
+       "  3\n",
+       "[torch.FloatTensor of size 3x1x1]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "x = torch.Tensor([[1], [2], [3]])\n",
+    "x.unsqueeze(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " 1\n",
+      " 2\n",
+      " 3\n",
+      "[torch.FloatTensor of size 3x1]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
