Keep labeled and segmentation masks in dataset; calculate iou of predictions.

--- a/scripts/optimizing_ali.ipynb
+++ b/scripts/optimizing_ali.ipynb
@@ -22,7 +22,8 @@
    "execution_count": 408,
    "metadata": {
     "_cell_guid": "e598f333-b831-4c7b-a6c7-8a1beb532e88",
-    "_uuid": "b14671a1b5787c6aaa46cdcf51499ef45754ca42"
+    "_uuid": "b14671a1b5787c6aaa46cdcf51499ef45754ca42",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -206,7 +207,8 @@
    "execution_count": 243,
    "metadata": {
     "_cell_guid": "ce197e18-5ba8-4994-bb01-3d2c97ecac9c",
-    "_uuid": "8e498fa24a1836ba59b23ede176b1fc7999eef0f"
+    "_uuid": "8e498fa24a1836ba59b23ede176b1fc7999eef0f",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -411,13 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "ee8c0810-1e18-42db-8c38-293b7f2a4568",
     "_uuid": "3c4ea0f0051b03ad7ce590b51719295b550a4ce2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing post_process.py\n"
+     ]
+    }
+   ],
    "source": [
+    "#%%writefile post_process.py\n",
     "def parametric_pipeline(img,\n",
     "                invert_thresh_pd = 10,\n",
     "                circle_size = 7,\n",
@@ -953,7 +964,8 @@
    "execution_count": 496,
    "metadata": {
     "_cell_guid": "1807d9c1-0f4d-4519-bf0d-156b6b61f423",
-    "_uuid": "b20fb54fa7efa9613608e061bf7091c873ef2442"
+    "_uuid": "b20fb54fa7efa9613608e061bf7091c873ef2442",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1365,7 +1377,8 @@
    "execution_count": 506,
    "metadata": {
     "_cell_guid": "1c318658-1cf3-4238-b61a-8b890238b44e",
-    "_uuid": "032a35371b8906477f2f4d9782d16a7e63e6deec"
+    "_uuid": "032a35371b8906477f2f4d9782d16a7e63e6deec",
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1377,7 +1390,8 @@
    "execution_count": null,
    "metadata": {
     "_cell_guid": "1349ec1a-cfae-48b2-b522-a65d9384f369",
-    "_uuid": "648d79ac4e50cfd6959773cec4ee50b02f0f94f5"
+    "_uuid": "648d79ac4e50cfd6959773cec4ee50b02f0f94f5",
+    "collapsed": true
    },
    "outputs": [],
    "source": []
