Make a standalone program.

--- a/scripts/pytorch.ipynb
+++ b/scripts/pytorch.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +211,7 @@
     "                        it,\n",
     "                        is_best,\n",
     "                        'model_save.pth.tar')\n",
+    "            cnt = 0\n",
     "    return it, best_loss, best_it\n",
     "\n",
     "def baseline(\n",
@@ -267,7 +268,7 @@
     }
    ],
    "source": [
-    "#%%writefile dataset.py\n",
+    "##%%writefile dataset.py\n",
     "#%pycat dataset.py\n",
     "\n",
     "from __future__ import division\n",
@@ -298,6 +299,7 @@
     "from sklearn.model_selection import train_test_split as train_test_split_sk\n",
     "\n",
     "import cv2\n",
+    "\n",
     "\n",
     "class NucleusDataset(Dataset):\n",
     "    \"\"\"Nucleus dataset.\"\"\"\n",
@@ -1818,6 +1820,73 @@
    ],
    "source": [
     "np.rot90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 603,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 0.1508605394512415, 0.14138794186360695), (20, 0.06947005353868008, 0.13381062616484568), (30, 0.060165710374712945, 0.12511444675243077), (40, 0.03398673869669437, 0.11621393918689779), (50, 0.0153909264318645, 0.10906757881371852), (60, 0.0230019719650348, 0.10420079410130925), (70, 0.015239033102989196, 0.10103696699747268), (80, 0.016849563806317747, 0.10080118066466906), (90, 0.017663979964951674, 0.10382523825939964), (100, 0.015023434832692147, 0.10746573925237446), (110, 0.012301610748876224, 0.10788909625262022)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "third arg must be a format string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-611-e6cf56f9b0dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplots\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnrows\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mncols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mys\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mzs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m#fig.savefig('path/to/save/image/to.png')   # save the figure to file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/stefan/anaconda/lib/python2.7/site-packages/matplotlib/__init__.pyc\u001b[0m in \u001b[0;36minner\u001b[0;34m(ax, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1896\u001b[0m                     warnings.warn(msg % (label_namer, func.__name__),\n\u001b[1;32m   1897\u001b[0m                                   RuntimeWarning, stacklevel=2)\n\u001b[0;32m-> 1898\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1899\u001b[0m         \u001b[0mpre_doc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1900\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpre_doc\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/stefan/anaconda/lib/python2.7/site-packages/matplotlib/axes/_axes.pyc\u001b[0m in \u001b[0;36mplot\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1404\u001b[0m         \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcbook\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnormalize_kwargs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_alias_map\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1405\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1406\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_lines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1407\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1408\u001b[0m             \u001b[0mlines\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/stefan/anaconda/lib/python2.7/site-packages/matplotlib/axes/_base.pyc\u001b[0m in \u001b[0;36m_grab_next_args\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    405\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    406\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremaining\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 407\u001b[0;31m                 \u001b[0;32mfor\u001b[0m \u001b[0mseg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_plot_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremaining\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    408\u001b[0m                     \u001b[0;32myield\u001b[0m \u001b[0mseg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/stefan/anaconda/lib/python2.7/site-packages/matplotlib/axes/_base.pyc\u001b[0m in \u001b[0;36m_plot_args\u001b[0;34m(self, tup, kwargs)\u001b[0m\n\u001b[1;32m    358\u001b[0m             \u001b[0mtup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtup\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    359\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 360\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'third arg must be a format string'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    361\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    362\u001b[0m             \u001b[0mlinestyle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: third arg must be a format string"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXkAAAD7CAYAAACPDORaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADHtJREFUeJzt3F+IXAe9wPHvLOtlveymWDp6fbKC9qcPNqDRJmn8b3yo\nFqJSwehDo1GLKFdvQfKkLz6oNIpFI02l9OEilyuaF5WIUBSbNGB9MUr7g61vgrpUm0RtU3ezPsws\nZ1g2M2dnZ2brz+8HCpk50+mPH5vvnj07p5319XUkSTXN7fYAkqTpMfKSVJiRl6TCjLwkFWbkJakw\nIy9JhbWKfETcFhE/2+L5OyPilxHxWER8fOLTSZJ2ZGTkI+LzwHeAhU3Pvwj4OvBu4K3AJyLiZdMY\nUpI0njZn8k8B79/i+dcCy5n5l8x8HngUeMskh5Mk7cz8qBdk5vcj4uYtDu0BLg08vgLcMOr91tfX\n1zudTusBJUkAjBXOkZEf4jKwNPB4CXhm1L/U6XRYWbmyg/9sHd3ukrvocxcNd9FwF41ud2n0i7aw\nk8g/Abw6Im4E/krvUs19O3g/SdKEbTvyEXEUWMzM0xHxP8BP6F3bfygzfz/pASVJ4+vswv+Fct0f\nv3r8UbThLhruouEuGt3u0ljX5L0ZSpIKM/KSVJiRl6TCjLwkFWbkJakwIy9JhRl5SSrMyEtSYUZe\nkgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszIS1JhRl6SCjPyklSYkZekwoy8JBVm5CWpMCMv\nSYUZeUkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbkJakwIy9JhRl5SSrMyEtSYUZekgoz8pJUmJGX\npMKMvCQVNj/qBRExB5wC9gJXgeOZuTxw/MPAvcAa8FBmfntKs0qStqnNmfwRYCEzDwAngJObjt8H\nvAu4Hbg3Il4y2RElSeNqE/lDwFmAzLwA7Nt0/NfADcAC0AHWJzmgJGl8Iy/XAHuASwOP1yJiPjNX\n+49/A/wK+Bvwg8x8ZtQbdrtL2x60KnfRcBcNd9FwFzvTJvKXgcEtz20EPiJuBd4DvBL4K/C/EXFX\nZn5v2BuurFwZc9xaut0ld9HnLhruouEuGuN+s2tzueYccAdAROwHLg4cuwQ8CzybmWvAnwCvyUvS\nC0SbM/kzwOGIOE/vmvuxiDgKLGbm6Yh4AHg0Ip4HngIentq0kqRt6ayvz/z3pOv++NXjj6INd9Fw\nFw130eh2lzrj/HveDCVJhRl5SSrMyEtSYUZekgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszI\nS1JhRl6SCjPyklSYkZekwoy8JBVm5CWpMCMvSYUZeUkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbk\nJakwIy9JhRl5SSrMyEtSYUZekgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszIS1Jh86NeEBFz\nwClgL3AVOJ6ZywPH3wh8DegAfwA+kpnPTWdcSdJ2tDmTPwIsZOYB4ARwcuNARHSAB4FjmXkIOAu8\nYhqDSpK2r03kN+JNZl4A9g0cuwV4GvhcRPwcuDEzc+JTSpLGMvJyDbAHuDTweC0i5jNzFbgJOAh8\nGlgGfhgRj2fmI8PesNtdGnfectxFw1003EXDXexMm8hfBga3PNcPPPTO4pcz8wmAiDhL70x/aORX\nVq6MMWo93e6Su+hzFw130XAXjXG/2bW5XHMOuAMgIvYDFweO/Q5YjIhX9R+/GfjtWJNIkiauzZn8\nGeBwRJyn9wmaYxFxFFjMzNMR8THgu/1fwp7PzB9NcV5J0jaMjHxmXgPu2fT0kwPHHwHeNOG5JEkT\n4M1QklSYkZekwoy8JBVm5CWpMCMvSYUZeUkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbkJakwIy9J\nhRl5SSrMyEtSYUZekgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszIS1JhRl6SCjPyklSYkZek\nwoy8JBVm5CWpMCMvSYUZeUkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbkJamw+VEviIg54BSwF7gK\nHM/M5S1edxr4c2aemPiUkqSxtDmTPwIsZOYB4ARwcvMLIuKTwOsmPJskaYfaRP4QcBYgMy8A+wYP\nRsRB4DbggYlPJ0nakZGXa4A9wKWBx2sRMZ+ZqxHxcuCLwPuAD7b9j3a7S9ubsjB30XAXDXfRcBc7\n0ybyl4HBLc9l5mr/z3cBNwE/Bv4L+M+IeDIzHx72hisrV8YYtZ5ud8ld9LmLhrtouIvGuN/s2kT+\nHHAn8P8RsR+4uHEgM+8H7geIiLuB14wKvCRpdtpE/gxwOCLOAx3gWEQcBRYz8/RUp5Mk7cjIyGfm\nNeCeTU8/ucXrHp7QTJKkCfFmKEkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbkJakwIy9JhRl5SSrM\nyEtSYUZekgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszIS1JhRl6SCjPyklSYkZekwoy8JBVm\n5CWpMCMvSYUZeUkqzMhLUmFGXpIKM/KSVJiRl6TCjLwkFWbkJakwIy9JhRl5SSrMyEtSYUZekgqb\nH/WCiJgDTgF7gavA8cxcHjj+IeCzwCpwEfhUZl6bzriSpO1ocyZ/BFjIzAPACeDkxoGIeDHwJeDt\nmXk7cAPw3mkMKknavjaRPwScBcjMC8C+gWNXgYOZ+ff+43nguYlOKEka28jLNcAe4NLA47WImM/M\n1f5lmT8CRMRngEXgp6PesNtdGmfWktxFw1003EXDXexMm8hfBga3PJeZqxsP+tfsvwrcAnwgM9dH\nveHKypXtzllSt7vkLvrcRcNdNNxFY9xvdm0u15wD7gCIiP30frk66AFgATgycNlGkvQC0OZM/gxw\nOCLOAx3gWEQcpXdp5nHgY8AvgEciAuAbmXlmSvNKkrZhZOT7193v2fT0kwN/9rP2kvQCZaAlqTAj\nL0mFGXlJKszIS1JhRl6SCjPyklSYkZekwoy8JBVm5CWpMCMvSYUZeUkqzMhLUmFGXpIKM/KSVJiR\nl6TCjLwkFWbkJakwIy9JhRl5SSrMyEtSYUZekgoz8pJUmJGXpMKMvCQVZuQlqTAjL0mFGXlJKszI\nS1JhRl6SCjPyklSYkZekwoy8JBVm5CWpMCMvSYUZeUkqzMhLUmHzo14QEXPAKWAvcBU4npnLA8fv\nBL4ArAIPZeaDU5pVkrRNbc7kjwALmXkAOAGc3DgQES8Cvg68G3gr8ImIeNk0BpUkbV+byB8CzgJk\n5gVg38Cx1wLLmfmXzHweeBR4y8SnlCSNZeTlGmAPcGng8VpEzGfm6hbHrgA3jHi/Tre7tL0pC3MX\nDXfRcBcNd7Ezbc7kLwODW57rB36rY0vAMxOaTZK0Q20ifw64AyAi9gMXB449Abw6Im6MiP+gd6nm\nsYlPKUkaS2d9fX3oCwY+XXMr0AGOAa8HFjPz9MCna+bofbrmW9MdWZLU1sjIS5L+dXkzlCQVZuQl\nqbA2H6Eci3fKNlrs4kPAZ+nt4iLwqcy8thuzTtOoPQy87jTw58w8MeMRZ6bF18Qbga/R+z3YH4CP\nZOZzuzHrtLXYxYeBe4E1eq349q4MOkMRcRvwlcx826bnt93NaZ7Je6dsY9guXgx8CXh7Zt5O7z6D\n9+7KlNN33T1siIhPAq+b9WC7YNjXRAd4EDiWmRs3I75iV6acjVFfF/cB7wJuB+6NiJfMeL6ZiojP\nA98BFjY9P1Y3pxl575RtDNvFVeBgZv69/3geKHnGxvA9EBEHgduAB2Y/2swN28UtwNPA5yLi58CN\nmZmzH3Fmhn5dAL+md/KzQO8nm+qfFnkKeP8Wz4/VzWlGfss7Za9zrM2dsv/KrruLzLyWmX8EiIjP\nAIvAT2c/4kxcdw8R8XLgi8Cnd2OwXTDs78dNwEHgm/TOYN8ZEe+Y8XyzNGwXAL8BfgX8FvhhZpa+\n4TIzvw/8Y4tDY3VzmpH3TtnGsF0QEXMRcR9wGPhAZlY9Uxm2h7voxe3H9H5kPxoRd892vJkatoun\n6Z2xPZGZ/6B3lrv57LaS6+4iIm4F3gO8ErgZeGlE3DXzCV8YxurmNCPvnbKNYbuA3uWJBeDIwGWb\niq67h8y8PzPf0P9F05eB72bmw7sx5IwM+5r4HbAYEa/qP34zvbPYqobt4hLwLPBsZq4BfwJKX5Mf\nYqxuTu1mKO+UbQzbBfB4/59f0Fxr/EZmntmFUadq1NfEwOvuBl7zb/Lpmuv9/XgHvW92HeB8Zv73\nrg07ZS12cQ/wUeB5eterP96/Jl1WRNwM/F9m7o+Io+ygm97xKkmFeTOUJBVm5CWpMCMvSYUZeUkq\nzMhLUmFGXpIKM/KSVJiRl6TC/gmEp4IEHCUJ/QAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1c605b2e10>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import operator\n",
+    "from operator import itemgetter\n",
+    "\n",
+    "xs = map(itemgetter(0), stats)\n",
+    "ys = map(itemgetter(1), stats)\n",
+    "zs = map(itemgetter(2), stats)\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots( nrows=1, ncols=1 )\n",
+    "ax.plot(xs,ys,'g')\n",
+    "ax.plot(xs,zs,'r')\n",
+    "plt.show()\n",
+    "#fig.savefig('path/to/save/image/to.png')   # save the figure to file\n",
+    "#plt.close(fig)    # close the figure\n",
+    "#print xs"
    ]
   },
   {
