Try instance weights with BCE loss.
- Also, make loss function and algo command line options.
- Also, catch exceptions in parametric pipeline.

--- a/scripts/pytorch.ipynb
+++ b/scripts/pytorch.ipynb
@@ -101,7 +101,6 @@
     }
    ],
    "source": [
-    "#%%writefile main.py\n",
     "#%pycat main.py\n",
     "\n",
     "import os\n",
@@ -1193,6 +1192,101 @@
     "#fig.savefig('path/to/save/image/to.png')   # save the figure to file\n",
     "#plt.close(fig)    # close the figure\n",
     "#print xs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 621,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 621,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=pd.DataFrame({'x':[1,2,3,4],'y':[1,2,3,4]})\n",
+    "x['x'].map(lambda x: x + 1)\n",
+    "#x['x'].map(lambda x: x + 1)\n",
+    "[x+1 for x in tqdm(x['x'])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 616,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   x  y\n",
+       "0  1  1\n",
+       "1  2  2\n",
+       "2  3  3\n",
+       "3  4  4"
+      ]
+     },
+     "execution_count": 616,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
    ]
   },
   {
