Fixing the merge conflict.
- Rename cfg to global_state. Also put args in global_state.
- Make checkpoint saving compatible.
- Make 'stratify' an option

--- a/scripts/pytorch.ipynb
+++ b/scripts/pytorch.ipynb
@@ -1070,8 +1070,9 @@
     "mse 0.304971608193 0.309523258999\n",
     "new arch\n",
     "mse 0.158894834172 0.114834653566\n",
-    "bce 0.268731293606 0.268899499194\n",
-    "dice 0.18559837001 0.142434036552"
+    "bce mean = 0.17207, med = 0.12120\n",
+    "dice mean = 0.24912, med = 0.19799\n",
+    "img-weighted bce 0.22999, med = 0.18525"
    ]
   },
   {
@@ -1196,16 +1197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 622,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:00<00:00, 11358.98it/s]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[2, 3, 4, 5]"
       ]
      },
-     "execution_count": 621,
+     "execution_count": 622,
      "metadata": {},
      "output_type": "execute_result"
     }
